--- a/source/form.html
+++ b/source/form.html
@@ -1,1 +1,67 @@
-
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Форма - HTML Academy: Погнали</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
+<body>
+  <header class="header">
+    <div class="wrapper">
+      <a class="logo" href="index.html">Погнали?</a>
+      <nav class="nav">
+        <button class="nav__toggle" type="button">Мобильная навигация</button>
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a href="#">О сервисе</a>
+          </li>
+          <li class="nav__item">
+            <a href="#">Направления</a>
+          </li>
+          <li class="nav__item">
+            <a href="#">Попутчики</a>
+          </li>
+        </ul>
+        <a class="btn btn--auth-header" href="#">Авторизация</a>
+        <div class="nav__contacts contacts">
+          <a class="contacts__phone" href="tel:88005558628">8 800 555-86-28</a>
+          <a class="contacts__email" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        </div>
+        <div class="nav__socials socials">
+          <a class="socials__item socials__item--facebook" href="https://facebook.com">Facebook</a>
+          <a class="socials__item socials__item--vk" href="https://vk.com">VK</a>
+          <a class="socials__item socials__item--instagram" href="https://instagram.com">Instagram</a>
+        </div>
+      </nav>
+      <div class="header__contacts header-contacts">
+        <a class="header-contacts__phone" href="tel:88005558628">8 800 555-86-28</a>
+        <a class="header-contacts__email" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        <a class="btn btn--auth-header" href="#">Авторизация</a>
+      </div>
+      <div class="header__page-caption page-caption">
+        <h3 class="page-caption__text">Попутчики</h3>
+        <a class="page-caption__back-to-home" href="index.html">На главную</a>
+      </div>
+    </div>
+  </header>
+  <main class="site-content"></main>
+  <footer class="footer">
+    <div class="wrapper">
+      <a class="footer__logo site-logo" href="index.html">Погнали?</a>
+      <div class="footer__socials">
+        <a class="footer__socials-item footer__socials-item--facebook" href="https://facebook.com"></a>
+        <a class="footer__socials-item footer__socials-item--vk" href="https://vk.com"></a>
+        <a class="footer__socials-item footer__socials-item--instagram" href="https://instagram.com"></a>
+      </div>
+      <div class="footer__developer">
+        <p>Разработано<a href="https://htmlacademy.ru" target="_blank">
+            <img src="img/htmlacademy.svg" alt="Логотип Html Academy" width="27" height="34" />
+          </a>
+        </p>
+      </div>
+    </div>
+  </footer>
+  <script src="js/main.js"></script>
+</body>
+</html>
