--- a/source/index.html
+++ b/source/index.html
@@ -113,9 +113,9 @@
             <p class="companions__card-level-text">level</p>
           </div>
           <ul class="companions__card-flags">
-            <li class="companions__card-flag companions__card-flag--sri-lanka"></li>
-            <li class="companions__card-flag companions__card-flag--thailand"></li>
-            <li class="companions__card-flag companions__card-flag--seychelles"></li>
+            <li class="companions__card-flag companions__card-flag--sri-lanka">Шри Ланка</li>
+            <li class="companions__card-flag companions__card-flag--thailand">Тайланд</li>
+            <li class="companions__card-flag companions__card-flag--seychelles">Сейшелы</li>
           </ul>
           <h5 class="companions__card-person">Таня Фирсова</h5>
           <section class="companions__card-tags">
@@ -142,8 +142,8 @@
             <p class="companions__card-level-text">level</p>
           </div>
           <ul class="companions__card-flags">
-            <li class="companions__card-flag companions__card-flag--germany"></li>
-            <li class="companions__card-flag companions__card-flag--czech"></li>
+            <li class="companions__card-flag companions__card-flag--germany">Германия</li>
+            <li class="companions__card-flag companions__card-flag--czech">Чехия</li>
           </ul>
           <h5 class="companions__card-person">Петя Демин</h5>
           <section class="companions__card-tags">
