--- a/source/form.html
+++ b/source/form.html
@@ -40,12 +40,322 @@
         <a class="btn btn--auth-header" href="#">Авторизация</a>
       </div>
       <div class="header__page-caption page-caption">
-        <h3 class="page-caption__text">Попутчики</h3>
+        <h3 class="page-caption__text">Направления</h3>
         <a class="page-caption__back-to-home" href="index.html">На главную</a>
       </div>
     </div>
   </header>
-  <main class="site-content"></main>
+  <main class="site-content">
+    <section class="profile">
+      <form class="profile__form" action="https://echo.htmlacademy.ru">
+        <section class="profile__section">
+          <h5 class="visually-hidden">Информация пользователя</h5>
+          <div class="profile__level-and-image">
+            <section class="form-person__level">
+              <h5 class="visually-hidden">Уровень пользователя</h5>
+              <p class="profile__level-number">80</p>
+              <p class="profile__level-text">level</p>
+            </section>
+            <picture class="profile__image">
+              <img src="https://via.placeholder.com/200" alt="Изображение пользователя" />
+            </picture>
+            <div class="profile__image-upload">
+              <input type="file" name="person-image" id="person-image" value="Сменить фото" />
+              <label for="person-image">
+                <span>Сменить</span> фото</label>
+            </div>
+          </div>
+          <section class="profile__tags">
+            <h2 class="profile__tags-title">Тэги</h2>
+            <textarea name="person-tags" placeholder="Введите тэги">#бургер #бар #футбол #концерт #крафт</textarea>
+          </section>
+          <section class="profile__transport">
+            <h2 class="profile__transport-title">Транспорт</h2>
+            <div class="profile__transport-input">
+              <input type="checkbox" name="transport" id="fly" value="fly" />
+              <label for="fly">Самолет</label>
+            </div>
+            <div class="profile__transport-input">
+              <input type="checkbox" name="transport" id="bus" value="bus" />
+              <label for="bus">Автобус</label>
+            </div>
+            <div class="profile__transport-input">
+              <input type="checkbox" name="transport" id="bike" value="bike" />
+              <label for="bike">Велосипед</label>
+            </div>
+            <div class="profile__transport-input">
+              <input type="checkbox" name="transport" id="walk" value="walk" />
+              <label for="walk">Пешком</label>
+            </div>
+          </section>
+        </section>
+      </form>
+    </section>
+    <section class="person-plans">
+      <h2 class="person-plans__title">Мои планы:</h2>
+      <ol class="plans-form__list plans-list">
+        <li class="plans-list__item">
+          <b class="plans-list__title">Франция, Италия</b>
+          <p class="plans-list__companions-count">3 попутчика</p>
+          <p class="plans-list__date">
+            <span class="plans-list__date-from">26 мар</span>
+            <span class="plans-list__date-separator">-</span>
+            <span class="plans-list__date-to">29 мар</span>
+          </p>
+          <button class="plans-list__edit-btn" type="button">Изменить</button>
+        </li>
+        <li class="plans-list__item">
+          <b class="plans-list__title">Тайланд, Индонезия</b>
+          <p class="plans-list__companions-count">1 попутчик</p>
+          <p class="plans-list__date">
+            <span class="plans-list__date-from">1 июл</span>
+            <span class="plans-list__date-separator">-</span>
+            <span class="plans-list__date-to">15 июл</span>
+          </p>
+          <button class="plans-list__edit-btn" type="button">Изменить</button>
+        </li>
+      </ol>
+    </section>
+    <section class="add-plan">
+      <h2 class="add-plan__title">Добавить план:</h2>
+      <form class="add-plan__form" action="https://echo.htmlacademy.ru">
+        <section class="step step-dates" id="dates">
+          <header class="add-plan__section-header">
+            <h2 class="add-plan__section-title">Шаг 1. Даты пребывания</h2>
+            <p class="add-plan__section-description">Укажите предпочтительное количество попутчиков, которых вы хотели бы позвать в поездку и ее предполагаемую длительность.</p>
+            <ul class="add-plan__section-list">
+              <li class="add-plan__section-list--active">
+                <a href="#dates">Даты</a>
+              </li>
+              <li>
+                <a href="#route">Маршрут</a>
+              </li>
+              <li>
+                <a href="#entertaiment">Развлечения</a>
+              </li>
+            </ul>
+          </header>
+          <div class="step__input-group">
+            <label class="step__input-label" for="companions-count">Ищу попутчиков:</label>
+            <p class="step__input-subtitle">Чел.</p>
+            <div class="step__input">
+              <button class="step__input-minus" type="button">Уменьшить</button>
+              <input class="step__input-field" type="text" name="companions-count" id="companions-count" value="2" />
+              <button class="step__input-plus" type="button">Увеличить</button>
+            </div>
+          </div>
+          <div class="step__input-group">
+            <label class="step__input-label" for="duration-count">Длительность:</label>
+            <p class="step__input-subtitle">Дн.</p>
+            <div class="step__input">
+              <button class="step__input-minus" type="button">Уменьшить</button>
+              <input class="step__input-field" type="text" name="duration-count" id="duration-count" value="2" />
+              <button class="step__input-plus" type="button">Увеличить</button>
+            </div>
+          </div>
+          <div class="step__checkbox-group">
+            <input class="step__input-checkbox" type="checkbox" name="children-allow" id="children-allow" />
+            <label class="step__checkbox-label" for="children-allow">Можно с детьми</label>
+          </div>
+          <section class="step-dates__calendar calendar">
+            <h5 class="visually-hidden">Календарь</h5>
+            <div class="calendar__month">
+              <button class="calendar__month-prev" type="button">Предыдущий месяц</button>
+              <b class="calendar__month-current">Март 2019</b>
+              <button class="calendar__month-next" type="button">Следующий месяц</button>
+            </div>
+            <table class="calendar__table">
+              <tr>
+                <th class="calendar__table-weekeday">Пн</th>
+                <th class="calendar__table-weekeday">Вт</th>
+                <th class="calendar__table-weekeday">Ср</th>
+                <th class="calendar__table-weekeday">Чт</th>
+                <th class="calendar__table-weekeday">Пт</th>
+                <th class="calendar__table-weekend">Сб</th>
+                <th class="calendar__table-weekend">Вс</th>
+              </tr>
+              <tr>
+                <td>23</td>
+                <td>24</td>
+                <td>25</td>
+                <td>26</td>
+                <td>27</td>
+                <td>28</td>
+                <td>1 мар</td>
+              </tr>
+              <tr>
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+                <td>7</td>
+                <td>8</td>
+              </tr>
+              <tr>
+                <td>9</td>
+                <td>10</td>
+                <td>11</td>
+                <td>12</td>
+                <td>13</td>
+                <td>14</td>
+                <td>15</td>
+              </tr>
+              <tr>
+                <td>16</td>
+                <td>17</td>
+                <td>18</td>
+                <td>19</td>
+                <td>20</td>
+                <td>21</td>
+                <td>22</td>
+              </tr>
+              <tr>
+                <td>23</td>
+                <td>24</td>
+                <td>25</td>
+                <td class="calendar__table-reservation">26
+                  <span>Заезд</span>
+                </td>
+                <td class="calendar__table-reservation">27</td>
+                <td class="calendar__table-reservation">28
+                  <span>Выезд</span>
+                </td>
+                <td>29</td>
+              </tr>
+              <tr>
+                <td>30</td>
+                <td>31</td>
+                <td>1 апр</td>
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+                <td>5</td>
+              </tr>
+            </table>
+          </section>
+          <a class="add-plan__btn add-plan__btn--next" href="#route">Следующий шаг</a>
+        </section>
+        <section class="step step-route" id="route">
+          <header class="add-plan__section-header">
+            <h2 class="add-plan__section-title">Шаг 2. Маршрут</h2>
+            <p class="add-plan__section-description">Укажите страны, которые вы хотели посетить. Это может быть одна или сразу несколько.</p>
+            <ul class="add-plan__section-list">
+              <li>
+                <a href="#dates">Даты</a>
+              </li>
+              <li class="add-plan__section-list--active">
+                <a href="#route">Маршрут</a>
+              </li>
+              <li>
+                <a href="#entertaiment">Развлечения</a>
+              </li>
+            </ul>
+          </header>
+          <section class="step-route__select-group select-country">
+            <h5 class="visually-hidden">Выбор стран</h5>
+            <ul class="select-country__item">
+              <li class="select-country__list select-country__list--selected">Босния и Герцеговина<i class="select-country__item-arrow"></i>
+              </li>
+              <li class="select-country__flag select-country__flag--bosnia">Босния и Герцеговина</li>
+              <button class="select-country__delete-btn" type="button">Кнопка удалить страну</button>
+            </ul>
+            <ul class="select-country__item">
+              <li class="select-country__list select-country__list--selected">Чехия<i class="select-country__item-arrow"></i>
+              </li>
+              <li class="select-country__flag select-country__flag--czech">Чехия</li>
+              <button class="select-country__delete-btn" type="button">Кнопка удалить страну</button>
+            </ul>
+            <ul class="select-country__item">
+              <li class="select-country__list select-country__list--choose">Выберите страну<i class="select-country__item-arrow"></i>
+                <button class="select-country__close-dropdown" type="button">Закрыть дропдаун меню</button>
+                <div class="select-country__dropdown">
+                  <ul class="select-country__dropdown-letters">
+                    <li>А</li>
+                    <li>Б</li>
+                    <li>В</li>
+                    <li>Г</li>
+                    <li>Д</li>
+                    <li>Е</li>
+                    <li>З</li>
+                    <li>И</li>
+                    <li>К</li>
+                    <li>Л</li>
+                    <li>М</li>
+                    <li>Н</li>
+                    <li>О</li>
+                    <li>П</li>
+                    <li>Р</li>
+                    <li>С</li>
+                    <li>Т</li>
+                    <li>У</li>
+                    <li>Ф</li>
+                    <li>Х</li>
+                    <li>Ч</li>
+                    <li>Ш</li>
+                    <li>Э</li>
+                    <li>Ю</li>
+                    <li>Я</li>
+                  </ul>
+                  <ul class="select-country__dropdown-countries">
+                    <li>Австралия</li>
+                    <li>Австрия</li>
+                    <li>Азербайджан</li>
+                    <li>Албания</li>
+                    <li>Алжир</li>
+                    <li>Ангола</li>
+                    <li>Андорра</li>
+                    <li>Антигуа и Барбуда</li>
+                    <li>Аргентина</li>
+                    <li>Армения</li>
+                    <li>Афганистан</li>
+                  </ul>
+                </div>
+                <button class="select-country__delete-btn" type="button">Кнопка удалить</button>
+              </li>
+            </ul>
+            <ul class="select-country__item">
+              <li class="select-country__list select-country__list--add">Добавить страну<i class="select-country__item-plus"></i>
+              </li>
+            </ul>
+          </section>
+          <a class="add-plan__btn add-plan__btn--next" href="#entertaiment">Следующий шаг</a>
+          <a class="add-plan__btn add-plan__btn--prev" href="#dates">На шаг назад</a>
+        </section>
+        <section class="step step-entertaiment" id="route">
+          <header class="add-plan__section-header">
+            <h2 class="add-plan__section-title">Шаг 3. Развлечения</h2>
+            <p class="add-plan__section-description">Наконец, расскажите о своих планах времяпровождения. Можно писать в свободной форме и ставить тэги.</p>
+            <ul class="add-plan__section-list">
+              <li>
+                <a href="#dates">Даты</a>
+              </li>
+              <li>
+                <a href="#route">Маршрут</a>
+              </li>
+              <li class="add-plan__section-list--active">
+                <a href="#entertaiment">Развлечения</a>
+              </li>
+            </ul>
+          </header>
+          <ul class="step-entertaiment__textarea-list">
+            <li class="step-entertaiment__textarea">
+              <strong class="step-entertaiment__country-name">Босния и Герцеговина</strong>
+              <span class="step-entertaiment__flag step-entertaiment__flag--bosnia">Босния и Герцеговина</span>
+              <textarea name="country-description" placeholder="План действий"></textarea>
+            </li>
+            <li class="step-entertaiment__textarea">
+              <strong class="step-entertaiment__country-name">Чехия</strong>
+              <span class="step-entertaiment__flag step-entertaiment__flag--czech">Чехия</span>
+              <textarea name="country-description" placceholder="План действий">Пить пиво и лазить по старым замкам, наслаждаться архитектурой и вот это все.</textarea>
+            </li>
+          </ul>
+        </section>
+        <button class="add-plan__btn add-plan__btn--submit" type="submit">Отправить</button>
+        <a class="add-plan__btn add-plan__btn--prev" href="#entertaiment">На шаг назад</a>
+      </form>
+    </section>
+  </main>
   <footer class="footer">
     <div class="wrapper">
       <a class="footer__logo site-logo" href="index.html">Погнали?</a>
