Сделал разметку фильтра по странам

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -46,7 +46,188 @@
     </div>
   </header>
   <main class="site-content">
-    <section class="companions-country-filter"></section>
+    <section class="companions-country-filter">
+      <h2 class="companions-country-filter__title">Фильтрация по странам</h2>
+      <button class="companions-country-filter__open-btn">Открыть фильтр</button>
+      <button class="companions-country-filter__close-btn companions-country-filter__close-btn--top">Закрыть фильтр</button>
+      <dl class="companions-country-filter__tab">
+        <dt class="companions-country-filter__tab-title">Европа</dt>
+        <dd class="companions-country-filter__content">
+          <ul class="companions-country-filter__letters-list">
+            <li>А</li>
+            <li>Б</li>
+            <li>В</li>
+            <li>Г</li>
+            <li>Д</li>
+            <li>Е</li>
+            <li>З</li>
+            <li>И</li>
+            <li>К</li>
+            <li>Л</li>
+            <li>М</li>
+            <li>Н</li>
+            <li>О</li>
+            <li>П</li>
+            <li>Р</li>
+            <li>С</li>
+            <li>Т</li>
+            <li>У</li>
+            <li>Ф</li>
+            <li>Х</li>
+            <li>Ч</li>
+            <li>Ш</li>
+            <li>Э</li>
+            <li>Ю</li>
+            <li>Я</li>
+          </ul>
+          <ul class="companions-country-filter__letters-list">
+            <li>Австралия</li>
+            <li>Австрия</li>
+            <li>Азербайджан</li>
+            <li>Албания</li>
+            <li>Алжир</li>
+            <li>Ангола</li>
+            <li>Андорра</li>
+            <li>Антигуа и Барбуда</li>
+            <li>Аргентина</li>
+            <li>Армения</li>
+          </ul>
+        </dd>
+      </dl>
+      <dl class="companions-country-filter__tab">
+        <dt class="companions-country-filter__tab-title">Азия</dt>
+        <dd class="companions-country-filter__content">
+          <ul class="companions-country-filter__letters-list">
+            <li>А</li>
+            <li>Б</li>
+            <li>В</li>
+            <li>Г</li>
+            <li>Д</li>
+            <li>Е</li>
+            <li>З</li>
+            <li>И</li>
+            <li>К</li>
+            <li>Л</li>
+            <li>М</li>
+            <li>Н</li>
+            <li>О</li>
+            <li>П</li>
+            <li>Р</li>
+            <li>С</li>
+            <li>Т</li>
+            <li>У</li>
+            <li>Ф</li>
+            <li>Х</li>
+            <li>Ч</li>
+            <li>Ш</li>
+            <li>Э</li>
+            <li>Ю</li>
+            <li>Я</li>
+          </ul>
+          <ul class="companions-country-filter__letters-list">
+            <li>Австралия</li>
+            <li>Австрия</li>
+            <li>Азербайджан</li>
+            <li>Албания</li>
+            <li>Алжир</li>
+            <li>Ангола</li>
+            <li>Андорра</li>
+            <li>Антигуа и Барбуда</li>
+            <li>Аргентина</li>
+            <li>Армения</li>
+          </ul>
+        </dd>
+      </dl>
+      <dl class="companions-country-filter__tab">
+        <dt class="companions-country-filter__tab-title">Америка</dt>
+        <dd class="companions-country-filter__content">
+          <ul class="companions-country-filter__letters-list">
+            <li>А</li>
+            <li>Б</li>
+            <li>В</li>
+            <li>Г</li>
+            <li>Д</li>
+            <li>Е</li>
+            <li>З</li>
+            <li>И</li>
+            <li>К</li>
+            <li>Л</li>
+            <li>М</li>
+            <li>Н</li>
+            <li>О</li>
+            <li>П</li>
+            <li>Р</li>
+            <li>С</li>
+            <li>Т</li>
+            <li>У</li>
+            <li>Ф</li>
+            <li>Х</li>
+            <li>Ч</li>
+            <li>Ш</li>
+            <li>Э</li>
+            <li>Ю</li>
+            <li>Я</li>
+          </ul>
+          <ul class="companions-country-filter__letters-list">
+            <li>Австралия</li>
+            <li>Австрия</li>
+            <li>Азербайджан</li>
+            <li>Албания</li>
+            <li>Алжир</li>
+            <li>Ангола</li>
+            <li>Андорра</li>
+            <li>Антигуа и Барбуда</li>
+            <li>Аргентина</li>
+            <li>Армения</li>
+          </ul>
+        </dd>
+      </dl>
+      <dl class="companions-country-filter__tab">
+        <dt class="companions-country-filter__tab-title">Острова</dt>
+        <dd class="companions-country-filter__content">
+          <ul class="companions-country-filter__letters-list">
+            <li>А</li>
+            <li>Б</li>
+            <li>В</li>
+            <li>Г</li>
+            <li>Д</li>
+            <li>Е</li>
+            <li>З</li>
+            <li>И</li>
+            <li>К</li>
+            <li>Л</li>
+            <li>М</li>
+            <li>Н</li>
+            <li>О</li>
+            <li>П</li>
+            <li>Р</li>
+            <li>С</li>
+            <li>Т</li>
+            <li>У</li>
+            <li>Ф</li>
+            <li>Х</li>
+            <li>Ч</li>
+            <li>Ш</li>
+            <li>Э</li>
+            <li>Ю</li>
+            <li>Я</li>
+          </ul>
+          <ul class="companions-country-filter__letters-list">
+            <li>Австралия</li>
+            <li>Австрия</li>
+            <li>Азербайджан</li>
+            <li>Албания</li>
+            <li>Алжир</li>
+            <li>Ангола</li>
+            <li>Андорра</li>
+            <li>Антигуа и Барбуда</li>
+            <li>Аргентина</li>
+            <li>Армения</li>
+          </ul>
+        </dd>
+      </dl>
+      <button class="companions-country-filter__close-btn companions-country-filter__close-btn--bottom">Свернуть</button>
+    </section>
     <section class="companions-content">
       <aside class="companions-content__filter companions-filter">
         <h2 class="companions-filter__title">Подбери идеального попутчика</h2>
