--- a/source/index.html
+++ b/source/index.html
@@ -361,6 +361,30 @@
       </div>
     </div>
   </footer>
+  <div class="popup tariffs__popup">
+    <div class="popup__wrapper">
+      <header class="popup__caption">Бизнес-тарифы</header>
+      <ul class="popup__table-list">
+        <li class="popup__item">
+          <span class="popup__service">Реклама у блоггера</span>
+          <span class="popup__price">300 000 руб./пост</span>
+        </li>
+        <li class="popup__item">
+          <span class="popup__service">Накрутка подписчиков</span>
+          <span class="popup__price">от 1 руб./шт.</span>
+        </li>
+        <li class="popup__item">
+          <span class="popup__service">Лайки от ботов</span>
+          <span class="popup__price">от 20 коп./лайк</span>
+        </li>
+        <li class="popup__item">
+          <span class="popup__service">Ваш продакт-плейсмент</span>
+          <span class="popup__price">Индивидуально</span>
+        </li>
+      </ul>
+    </div>
+    <button class="popup__close-btn" type="button">Закрыть окно</button>
+  </div>
   <script src="js/main.js"></script>
 </body>
 </html>
