--- a/source/index.html
+++ b/source/index.html
@@ -108,18 +108,19 @@
       </div>
     </section>
     <section class="service">
-      <div class="wrapper">
+      <div class="wrapper service__wrapper">
         <div class="service__content">
           <h2 class="section-caption service__caption">О сервисе</h2>
           <p class="service__description">Любое путешествие веселее
             <br />с попутчиками, которые на
             <br />одной волне с тобой! Делитесь своими идеями путешествий и черпайте вдохновение в чужих.</p>
           <p class="service__tagline">А если найдете кого-то близкого по духу — скорее зовите в совместный трип!</p>
+          <a class="section-btn service__btn" href="#">Подробнее</a>
         </div>
       </div>
     </section>
     <section class="destanation">
-      <div class="wrapper">
+      <div class="wrapper destanation__wrapper">
         <div class="destanation__content">
           <h2 class="section-caption destanation__caption">Направления</h2>
           <p class="destanation__description">Мы не продаем туры
@@ -164,11 +165,12 @@
       </div>
     </section>
     <section class="companions">
-      <div class="wrapper">
+      <div class="wrapper companions__wrapper">
         <div class="companions__content">
           <h2 class="section-caption companions__caption">Попутчики</h2>
           <p class="companions__description">Все мы индивидуальны и у каждого свой взгляд на идеальный отдых. Одному нужен пляж и коктейль, а другому маршрут для хайкинга.</p>
-          <p class="companions__tagline">Теперь можно легко найти единомышленников!</p>
+          <p class="companions__tagline">Теперь можно легко
+            <br />найти единомышленников!</p>
         </div>
         <div class="companions__cards">
           <article class="companions__card">
@@ -272,23 +274,32 @@
           <br />профиль</h2>
         <ol class="tariffs__table">
           <li class="tariffs__table-item tariffs__table-item--first">
-            <span class="tariffs__table-tarrif-name">Базовое размещение</span>
-            <span class="tariffs__table-price">Беслпатно</span>
+            <div class="tariffs__table-content">
+              <span class="tariffs__table-tarrif-name">Базовое размещение</span>
+              <span class="tariffs__table-price">Бесплатно</span>
+            </div>
           </li>
           <li class="tariffs__table-item tariffs__table-item--second">
-            <span class="tariffs__table-tarrif-name">Вывод на первых позициях</span>
-            <span class="tariffs__table-price">99 руб./мес</span>
+            <div class="tariffs__table-content">
+              <span class="tariffs__table-tarrif-name">Вывод на первых позициях</span>
+              <span class="tariffs__table-price">99 руб./мес</span>
+            </div>
           </li>
           <li class="tariffs__table-item tariffs__table-item--third">
-            <span class="tariffs__table-tarrif-name">Кастомный цвет карточки</span>
-            <span class="tariffs__table-price">59 руб./мес</span>
+            <div class="tariffs__table-content">
+              <span class="tariffs__table-tarrif-name">Кастомный цвет карточки</span>
+              <span class="tariffs__table-price">59 руб./мес</span>
+            </div>
           </li>
         </ol>
-        <a class="tariffs__btn" href="#">Показать тарифы для бизнеса</a>
+        <a class="tariffs__btn" href="#">
+          <span class="tariffs__btn-icon"><svg id="tariffs-btn-icon" viewBox="0 0 17 21"><path d="M16.4,15.1c-0.9-1.2-2-2-3.6-2.4l-1.5,5.2c0,0.5-0.4,0.9-0.9,0.9c-0.5,0-0.9-0.4-0.9-0.9v-4.2          c0-0.6-0.5-1.1-1.1-1.1c-0.6,0-1.1,0.5-1.1,1.1v4.2c0,0.5-0.4,0.9-0.9,0.9c-0.5,0-0.9-0.4-0.9-0.9l-1.5-5.2          c-1.6,0.4-2.7,1.2-3.6,2.4C0.2,15.6,0,16.6,0,17.1c0,0.1,0,0.3,0,0.4v0.9v0.9c0,1,0.8,1.7,1.7,1.7h13.5c1,0,1.7-0.8,1.7-1.7v-0.9          v-0.9c0-0.2,0-0.3,0-0.4C17,16.6,16.8,15.6,16.4,15.1z M3.9,4.6c0,2.6,1.6,6.3,4.6,6.3c2.9,0,4.6-3.8,4.6-6.3c0-2.6-2-4.6-4.6-4.6          C6,0,3.9,2.1,3.9,4.6z"></path></svg></span>
+          <span class="tariffs__btn-text">Показать тарифы для бизнеса</span>
+        </a>
       </div>
     </section>
     <section class="registration">
-      <div class="wrapper">
+      <div class="wrapper registration__wrapper">
         <h2 class="section-caption registration__caption">Заинтересовались?</h2>
         <p class="registration__description">Зарегистрируйтесь,
           <br />это быстро и бесплатно!
@@ -314,12 +325,12 @@
       </div>
     </section>
     <section class="route">
-      <div class="wrapper">
+      <div class="wrapper route__wrapper">
         <h5 class="visually-hidden">Проложить маршрут</h5>
         <div class="route__content">
           <a class="route__address" href="#">
             <span class="route__address-icon"><svg id="icon-route-marker" viewBox="0 0 28 43"><path d="M11.7,13.9c0-1.2,1-2.2,2.3-2.2s2.3,1,2.3,2.2c0,1.2-1,2.2-2.3,2.2C12.8,16.1,11.7,15.1,11.7,13.9z M14,8.1  c-3.2,0-5.9,2.6-5.9,5.8s2.6,5.8,5.9,5.8c3.2,0,5.9-2.6,5.9-5.8C19.9,10.7,17.2,8.1,14,8.1z M0,13.6c0,9.1,10.9,16.2,11.7,26.7v0.4  c0,1.2,1,2.2,2.3,2.2s2.3-1,2.3-2.2v-0.4C17.2,29.8,28,22.8,28,13.6C28,6.1,21.7,0,14,0C6.3,0,0,6.1,0,13.6z M14,4.5  c5.2,0,9.5,4.2,9.5,9.4c0,5.2-4.2,9.4-9.5,9.4s-9.5-4.2-9.5-9.4C4.5,8.7,8.8,4.5,14,4.5z"></path></svg></span>
-            <span class="route__address-text">ул. Большая<br/>Конюшенная, 19/8</span>
+            <span class="route__address-text">ул. Большая<br/> Конюшенная, 19/8</span>
           </a>
           <a class="section-btn section-btn--outline route__btn" href="#">Проложить маршрут</a>
         </div>
