--- a/source/index.html
+++ b/source/index.html
@@ -11,7 +11,9 @@
     <div class="wrapper header__wrapper">
       <a class="header__logo">
         <picture>
-          <img class="logo__img" src="img/logo-mobile-white@1x.png" width="100" height="19" alt="Логотип Погнали" />
+          <source class="header__logo-tablet" media="(min-width: 768px)" srcset="img/logo-tablet-white@1x.png" type="image/png" />
+          <source class="header__logo-desktop" media="(min-widths: 1440px)" srcset="img/logo-desktop-white@1x.png" type="image/png" />
+          <img class="header__logo-img" src="img/logo-mobile-white@1x.png" width="100" height="19" alt="Логотип Погнали" />
         </picture>
       </a>
       <button class="header__nav-btn" type="button">Мобильная навигация</button>
@@ -114,7 +116,8 @@
           <p class="service__description">Любое путешествие веселее
             <br />с попутчиками, которые на
             <br />одной волне с тобой! Делитесь своими идеями путешествий и черпайте вдохновение в чужих.</p>
-          <p class="service__tagline">А если найдете кого-то близкого по духу — скорее зовите в совместный трип!</p>
+          <p class="service__tagline">А если найдете кого-то близкого по духу —
+            <br />скорее зовите в совместный трип!</p>
           <a class="section-btn service__btn" href="#">Подробнее</a>
         </div>
       </div>
@@ -132,6 +135,8 @@
         <div class="destanation__cards">
           <article class="destanation__card">
             <picture class="destanation__card-image">
+              <source media="(min-width: 768px)" srcset="img/thailand-desktop@1x.jpg" type="image/jpg" />
+              <source media="(min-width: 1440px)" srcset="img/thailand-desktop@1x.jpg" type="image/jpg" />
               <img src="img/thailand-mobile@1x.jpg" width="270" height="110" alt="Изображение карточки направления" />
             </picture>
             <div class="destanation__card-country destanation__card-country--thailand">
@@ -142,6 +147,8 @@
           </article>
           <article class="destanation__card">
             <picture class="destanation__card-image">
+              <source media="(min-width: 768px)" srcset="img/france-desktop@1x.jpg" type="image/jpg" />
+              <source media="(min-width: 1440px)" srcset="img/france-desktop@1x.jpg" type="image/jpg" />
               <img src="img/france-mobile@1x.jpg" width="270" height="110" alt="Изображение карточки направления" />
             </picture>
             <div class="destanation__card-country destanation__card-country--france">
@@ -152,6 +159,8 @@
           </article>
           <article class="destanation__card">
             <picture class="destanation__card-image">
+              <source media="(min-width: 768px)" srcset="img/czech-desktop@1x.jpg" type="image/jpg" />
+              <source media="(min-width: 1440px)" srcset="img/czech-desktop@1x.jpg" type="image/jpg" />
               <img src="img/czech-mobile@1x.jpg" width="270" height="110" alt="Изображение карточки направления" />
             </picture>
             <div class="destanation__card-country destanation__card-country--czech">
@@ -186,9 +195,15 @@
             </div>
             <div class="companions__card-content">
               <ul class="companions__card-flags">
-                <li class="companions__card-flag companions__card-flag--sri-lanka">Шри Ланка</li>
-                <li class="companions__card-flag companions__card-flag--thailand">Тайланд</li>
-                <li class="companions__card-flag companions__card-flag--seychelles">Сейшелы</li>
+                <li class="companions__card-flag companions__card-flag--sri-lanka">ШриЛанка
+                  <span class="companions__card-flag-tooltip">ШриЛанка</span>
+                </li>
+                <li class="companions__card-flag companions__card-flag--thailand">Тайланд
+                  <span class="companions__card-flag-tooltip">Тайланд</span>
+                </li>
+                <li class="companions__card-flag companions__card-flag--seychelles">Сейшелы
+                  <span class="companions__card-flag-tooltip">Сейшелы</span>
+                </li>
               </ul>
               <a class="companions__card-person" href="#">
                 <span class="companions__card-person-status companions__card-person-status--offline"></span>
@@ -232,8 +247,12 @@
             </div>
             <div class="companions__card-content">
               <ul class="companions__card-flags">
-                <li class="companions__card-flag companions__card-flag--germany">Германия</li>
-                <li class="companions__card-flag companions__card-flag--czech">Чехия</li>
+                <li class="companions__card-flag companions__card-flag--belgium">Бельгия
+                  <span class="companions__card-flag-tooltip">Бельгия</span>
+                </li>
+                <li class="companions__card-flag companions__card-flag--czech">Чехия
+                  <span class="companions__card-flag-tooltip">Чехия</span>
+                </li>
               </ul>
               <a class="companions__card-person" href="#">
                 <span class="companions__card-person-status companions__card-person-status--online"></span>
@@ -348,7 +367,9 @@
       <div class="footer__content">
         <a class="footer__logo" href="index.html">
           <picture>
-            <img class="logo__img" src="img/logo-mobile-blue@1x.png" width="96" height="15" alt="Логотип Погнали" />
+            <source class="footer__logo-tablet" media="(min-width: 768px)" srcset="img/logo-tablet-blue@1x.png" type="image/png" />
+            <source class="footer__logo-desktop" media="(min-widths: 1440px)" srcset="img/logo-desktop-blue@1x.png" type="image/png" />
+            <img class="footer__logo-img" src="img/logo-mobile-blue@1x.png" width="96" height="15" alt="Логотип Погнали" />
           </picture>
         </a>
         <div class="footer__socials">
