Поправил ошибки (index, catalog) по валидатору

--- a/source/index.html
+++ b/source/index.html
@@ -67,8 +67,8 @@
         <a class="header__contacts-item" href="tel:88005558628">
           <span class="header__contacts-item-icon"><svg id="icon-mail-alt" viewBox="0 0 18 14"><path d="M14.9,1.8c1.2-1,0.9-1.8-0.7-1.8H3.7C2.2,0,1.9,0.8,3.1,1.8l3.7,3.1c1.2,1,3.2,1,4.4,0L14.9,1.8z"></path><path d="M11.9,7.1c-1.2,1-2.2,1.8-2.2,1.8c0,0,0,0,0,0C9.6,9,9.5,9,9.4,9c0,0-0.1,0-0.1,0C9.2,9.1,9.1,9.1,9,9.1            c0,0,0,0,0,0c0,0,0,0,0,0l0,0c0,0,0,0,0,0c-0.1,0-0.2,0-0.3-0.1c0,0-0.1,0-0.1,0C8.5,9,8.4,9,8.3,8.9c0,0,0,0,0,0            c0,0-1-0.8-2.2-1.8L2.2,3.8C1,2.8,0,3.3,0,4.8v6.3C0,12.7,1.3,14,2.8,14h12.3c1.6,0,2.8-1.3,2.8-2.8V4.8c0-1.6-1-2-2.2-1            L11.9,7.1z"></path></svg></span>
           <span class="header__contacts-item-text"> 8 800 555-86-28</span>
-          <a class="header__contacts-btn" href="#">Авторизация</a>
         </a>
+        <a class="header__contacts-btn" href="#">Авторизация</a>
       </div>
     </div>
   </header>
@@ -183,6 +183,7 @@
         </div>
         <div class="companions__cards">
           <article class="companions__card">
+            <h5 class="visually-hidden">Карточка попутчика</h5>
             <picture class="companions__card-image">
               <img src="img/firsova-desktop@1x.jpg" width="285" height="285" alt="Изображение карточки направления" />
             </picture>
@@ -235,6 +236,7 @@
             </div>
           </article>
           <article class="companions__card">
+            <h5 class="visually-hidden">Карточка попутчика</h5>
             <picture class="companions__card-image">
               <img src="img/demin-desktop@1x.jpg" width="285" height="285" alt="Изображение карточки направления" />
             </picture>
@@ -323,12 +325,11 @@
         <p class="registration__description">Зарегистрируйтесь,
           <br />это быстро и бесплатно!
           <br />Уже зарегистрированы? Тогда
-          <br />скорее <a href='#'>авторизуйтесь</a>.
+          <br />скорее <a href='#'>авторизуйтесь</a>.</p>
         <form class="registration__form" action="https://echo.htmlacademy.ru">
           <input class="registration__email" type="text" name="email" placeholder="E-mail" />
           <button class="registration__form-btn" type="submit">Регистрация</button>
         </form>
-        </p>
         <p class="registration__tagline">Остались вопросы?
           <br />Мы с радостью на них ответим!</p>
         <div class="registration__contacts">
@@ -358,7 +359,7 @@
     <section class="map">
       <h5 class="visually-hidden">Карта</h5>
       <div class="map__location">
-        <script type="text/javascript" charset="utf-8" async="" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab39ee2d8f9728237d10dc5fbdeac3d0f7cfec4779c16284b738645571ccf069f&amp;width=100%25&amp;height=720&amp;lang=ru_RU&amp;scroll=true"></script>
+        <script async="" src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab39ee2d8f9728237d10dc5fbdeac3d0f7cfec4779c16284b738645571ccf069f&amp;width=100%25&amp;height=720&amp;lang=ru_RU&amp;scroll=true"></script>
       </div>
     </section>
   </main>
