--- a/source/form.html
+++ b/source/form.html
@@ -67,15 +67,15 @@
         <a class="header__contacts-item" href="tel:88005558628">
           <span class="header__contacts-item-icon"><svg id="icon-mail-alt" viewBox="0 0 18 14"><path d="M14.9,1.8c1.2-1,0.9-1.8-0.7-1.8H3.7C2.2,0,1.9,0.8,3.1,1.8l3.7,3.1c1.2,1,3.2,1,4.4,0L14.9,1.8z"></path><path d="M11.9,7.1c-1.2,1-2.2,1.8-2.2,1.8c0,0,0,0,0,0C9.6,9,9.5,9,9.4,9c0,0-0.1,0-0.1,0C9.2,9.1,9.1,9.1,9,9.1            c0,0,0,0,0,0c0,0,0,0,0,0l0,0c0,0,0,0,0,0c-0.1,0-0.2,0-0.3-0.1c0,0-0.1,0-0.1,0C8.5,9,8.4,9,8.3,8.9c0,0,0,0,0,0            c0,0-1-0.8-2.2-1.8L2.2,3.8C1,2.8,0,3.3,0,4.8v6.3C0,12.7,1.3,14,2.8,14h12.3c1.6,0,2.8-1.3,2.8-2.8V4.8c0-1.6-1-2-2.2-1            L11.9,7.1z"></path></svg></span>
           <span class="header__contacts-item-text"> 8 800 555-86-28</span>
-          <a class="header__contacts-btn" href="#">Авторизация</a>
         </a>
+        <a class="header__contacts-btn" href="#">Авторизация</a>
       </div>
     </div>
   </header>
-  <section class="page-header">
+  <section class="page-title">
     <div class="wrapper">
-      <h3 class="page-header__caption">Направления</h3>
-      <a class="page-header__back-to-home" href="index.html">На главную</a>
+      <h3 class="page-title__caption">Направления</h3>
+      <a class="page-title__back-to-home" href="index.html">На главную</a>
     </div>
   </section>
   <main class="site-content">
