Сделал планшетную версию каталога

--- a/source/form.html
+++ b/source/form.html
@@ -73,7 +73,7 @@
     </div>
   </header>
   <section class="page-title">
-    <div class="wrapper">
+    <div class="wrapper page-title__wrapper">
       <h3 class="page-title__caption">Направления</h3>
       <a class="page-title__back-to-home" href="index.html">На главную</a>
     </div>
