Мобильная и планшетная версии каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -72,7 +72,7 @@
       </div>
     </div>
   </header>
-  <main class="site-content catalog-page">
+  <main class="site-content">
     <section class="page-title">
       <div class="wrapper page-title__wrapper">
         <h3 class="page-title__caption">Попутчики</h3>
